# fastapi-beanie-realworld-example

./: .env  .gitignore  pyproject.toml
backend/: main.py
backend/models/: __init__.py  article.py  user.py
